--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Guiminamflix</title>
+    <title>Animais</title>
 </head>
 
 <body>
-    <header>GUIMINAMFLIX</header>
+    <header>Funnypets</header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO</h1>
-            <p>#homem-aranha</p>
+            <h1>Animais engraçados</h1>
+            <p>#animais</p>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
+            <iframe width="560" height="315" src="https://youtu.be/uLcBpuB8UiA?si=uHbVuiaCje3B1zE1"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -28,22 +28,22 @@
     </section>
 
     <section class="categoria">
-        <h2>Filmes e séries</h2>
+        <h2>Mais vídeos</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            <a href="https://youtu.be/o0XIOR2FQEM?si=9HplxQXHnF8Iv6s1">
+                <img src="https://img.youtube.com/vi/9HplxQXHnF8Iv6s1/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=CUgOmpu5HBapDhWa">
+                <img src="https://img.youtube.com/vi/CUgOmpu5HBapDhWa/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=_acRiIO-zbQSpXTt">
+                <img src="https://img.youtube.com/vi/_acRiIO-zbQSpXTt/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=KtYcoNCT2R4SZcsS">
+                <img src="https://img.youtube.com/vi/KtYcoNCT2R4SZcsS/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=Pog8W2b1l7Cemioz">
+                <img src="https://img.youtube.com/vi/Pog8W2b1l7Cemioz/maxresdefault.jpg" />
             </a>
         </div>
     </section>
