--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://youtu.be/uLcBpuB8UiA?si=uHbVuiaCje3B1zE1"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/EAjQNcH9ug0?si=hgPBl5Y6ERS-ATUV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
